build_err_5.txt
    Checking prismarine v0.1.0 (C:\Users\mikan\.gemini\antigravity\scratch\Prismarine-Core-Project\src-tauri)
warning: unused import: `std::process::Stdio`
 --> src\monitor.rs:5:5
  |
5 | use std::process::Stdio; // Added Stdio
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0282]: type annotations needed for `Vec<_>`
   --> src\monitor.rs:104:17
    |
104 |             let mut buffer = Vec::new();
    |                 ^^^^^^^^^^   ---------- type must be known at this point
    |
help: consider giving `buffer` an explicit type, where the type for type parameter `T` is specified
    |
104 |             let mut buffer: Vec<T> = Vec::new();
    |                           ++++++++

error[E0599]: no method named `creation_flags` found for struct `std::process::Command` in the current scope
   --> src\java_detector.rs:157:13
    |
157 |         cmd.creation_flags(0x08000000); // CREATE_NO_WINDOW
    |             ^^^^^^^^^^^^^^ method not found in `std::process::Command`
    |
   ::: C:\Users\mikan\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\std\src\os\windows\process.rs:182:8
    |
182 |     fn creation_flags(&mut self, flags: u32) -> &mut process::Command;
    |        -------------- the method is available for `std::process::Command` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `CommandExt` which provides `creation_flags` is implemented but not in scope; perhaps you want to import it
    |
  1 + use std::os::windows::process::CommandExt;
    |

warning: unused import: `Seek`
 --> src\monitor.rs:3:21
  |
3 | use std::io::{Read, Seek}; // Added Read and Seek traits
  |                     ^^^^

warning: unused import: `Read`
 --> src\monitor.rs:3:15
  |
3 | use std::io::{Read, Seek}; // Added Read and Seek traits
  |               ^^^^

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `prismarine` (lib) generated 3 warnings
error: could not compile `prismarine` (lib) due to 2 previous errors; 3 warnings emitted
